argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  # annotations:
    # cert-manager.io/cluster-issuer: clusterissuer
    # traefik.ingress.kubernetes.io/router.middlewares: cert-manager-redirect@kubernetescrd
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: http
    host: argo.192.168.100.140.nip.io
  # tls:
  # - hosts:
  #   - cd.3756home.com
  #   secretName: argocd-ingress-http
